scripts/nullaway/wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8.txt
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:169: error: [NullAway] dereferenced expression r.getConfig() is @Nullable
            if (r.getConfig().equals(this) && p.getConfig().equals(this)) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:169: error: [NullAway] dereferenced expression r is @Nullable
            if (r.getConfig().equals(this) && p.getConfig().equals(this)) {
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:169: error: [NullAway] dereferenced expression p.getConfig() is @Nullable
            if (r.getConfig().equals(this) && p.getConfig().equals(this)) {
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:169: error: [NullAway] dereferenced expression p is @Nullable
            if (r.getConfig().equals(this) && p.getConfig().equals(this)) {
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:294: error: [NullAway] dereferenced expression sender.getConfig() is @Nullable
                if (sender instanceof PortConfigRequis && sender.getConfig().getParent() != null) {
                                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:295: error: [NullAway] dereferenced expression sender.getConfig().getParentConfig() is @Nullable
                    if (sender.getConfig().getParentConfig().equals(rec.getConfig())) {
                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:300: error: [NullAway] dereferenced expression rec.getConfig() is @Nullable
                if (sender instanceof PortConfigFourni && rec.getConfig().getParentConfig() != null) {
                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:301: error: [NullAway] dereferenced expression sender.getConfig() is @Nullable
                    if (!sender.getConfig().equals(rec.getConfig().getParentConfig())) {
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:307: error: [NullAway] dereferenced expression sender.getConfig() is @Nullable
                if (sender.getConfig().equals(rec.getConfig())) {
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Connecteur.java:41: error: [NullAway] dereferenced expression ((Configuration) this.getParent()) is @Nullable
            ((Configuration) this.getParent()).callBindings(sender, message);
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:39: error: [NullAway] dereferenced expression this.sideA is @Nullable
            if (((Role) sender).getName().equals(this.sideA.getName())) {
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:41: error: [NullAway] dereferenced expression this.sideB is @Nullable
            } else if (((Role) sender).getName().equals(this.sideB.getName())) {
                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:45: error: [NullAway] dereferenced expression this.sideA is @Nullable
            if (((Port) sender).getName().equals(this.sideA.getName())) {
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:47: error: [NullAway] dereferenced expression this.sideB is @Nullable
            } else if (((Port) sender).getName().equals(this.sideB.getName())) {
                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/PortFourni.java:16: error: [NullAway] dereferenced expression this.getConfig() is @Nullable
        this.getConfig().callAttachments(this, message);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/RoleTo.java:16: error: [NullAway] dereferenced expression this.getConfig() is @Nullable
        this.getConfig().callBindings(this, message);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/PortRequis.java:17: error: [NullAway] dereferenced expression this.getConfig() is @Nullable
        this.getConfig().callBindings(this, message);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M0/Application.java:18: error: [NullAway] dereferenced expression mainConfig.getComposant("Server") is @Nullable
        mainConfig.getComposant("Server").setSubconf(serverConfig);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M0/Application.java:29: error: [NullAway] dereferenced expression serverConfig.getComposant("ConnexionManager") is @Nullable
        serverConfig.addLink("CommIn", serverConfig.getPortR("ReceiveRequestPortConfig"), serverConfig.getComposant("ConnexionManager").getPortR("ExternalSocketIn"));
                                                                                                                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M0/Application.java:32: error: [NullAway] dereferenced expression mainConfig.getComposant("Client").getServiceF("SendRequestService") is @Nullable
        mainConfig.getComposant("Client").getServiceF("SendRequestService").activate("hello");
                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M0/Application.java:32: error: [NullAway] dereferenced expression mainConfig.getComposant("Client") is @Nullable
        mainConfig.getComposant("Client").getServiceF("SendRequestService").activate("hello");
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M1/server_details/ConnexionManagerComponent.java:27: error: [NullAway] dereferenced expression this.getPortF("ExternalSocketOut") is @Nullable
        this.getPortF("ExternalSocketOut").activate(response);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M1/client_server/SendRequestService.java:18: error: [NullAway] dereferenced expression ((SendRequestPort) this.parent.getPortF("SendRequest")) is @Nullable
        ((SendRequestPort) this.parent.getPortF("SendRequest")).activate(message);
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M1/client_server/ServerComponent.java:22: error: [NullAway] dereferenced expression ((AnswerRequestPort) this.getPortF("AnswerRequest")) is @Nullable
        ((AnswerRequestPort) this.getPortF("AnswerRequest")).activate(ack);
                                                            ^
    (see http://t.uber.com/nullaway )
24 errors
